--- a/ET_A3/public/partials/patientDetail.html
+++ b/ET_A3/public/partials/patientDetail.html
@@ -8,7 +8,7 @@
                 <tbody>
                     <tr>
                         <td>ID:</td>
-                        <td><input type="text" ng-model="patient._id" required /></td>
+                        <td><input type="text" ng-model="patient._id" required ng-disabled="{{isDisabled}}" /></td>
                     </tr>
                     <tr>
                         <td>First Name:</td>
